--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -30,11 +30,11 @@ jobs:
         # Added --icon app.icns to include the icon for the macOS application bundle.
         # macOS uses a COLON (:) as the separator for --add-data if you needed to add data files,
         # but for an icon, --icon is sufficient.
-        run: pyinstaller --onefile --windowed --name "MyAppName" --icon app2.icns main.py
+        run: pyinstaller --onefile --windowed --name "NamedTimers" --icon app2.icns main.py
         
       - name: Prepare artifact
         run: |
-          APP_NAME="MyAppName.app"
+          APP_NAME="NamedTimers.app"
           APP_VERSION="${{ github.ref_name }}"
           # Get the app from dist folder and zip it
           cd dist
@@ -43,7 +43,7 @@ jobs:
       - name: Upload artifact to GitHub
         uses: actions/upload-artifact@v4
         with:
-          name: macOS-MyAppName
+          name: macOS-NamedTimers
           path: dist/*.zip
           retention-days: 7
 
